--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ repository               : "jkressel/jkressel.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile.png"
+  avatar           : "profile.jpg"
   name             : "John Alistair Kressel"
   pronouns         : # example: "she/her"  
   bio              : "Systems and security researcher."
