--- a/_config.yml
+++ b/_config.yml
@@ -65,7 +65,7 @@ author:
   keybase          : # Username
   instagram        : # Username
   lastfm           : # Username
-  linkedin         : "https://www.linkedin.com/in/jkressel/"# Username
+  linkedin         : "jkressel" # Username
   mastodon         : # URL
   medium           : # URL
   pinterest        : # Username
